src/css/legislation_fixes.scss
.legislation .label{
    display:initial;
    color:#000;
    text-align:left;
    white-space: normal;
    border-radius:initial;
}

.legislation .labelled.label .label{
    cursor:pointer;
}

.legislation p.label{
  display:block;
}
.legislation a,
.legislation a.def-popover,
.legislation a.def-popover{
    color:#000;
}
.history-note{
    display:none;
}
.notes .results-container .history-note{
    display: inherit;

}

.underlines .results-container .legislation a{
    text-decoration: underline;
    color:#337ab7;

}

.underlines .results-container .legislation{
    h1,h2,h3,h4,h5,h6 {
        a{
            text-decoration: none;
            color:#000;
        }
    }
}
.underlines .results-container .legislation a.def-popover{
    color:#000;
    text-decoration: none;
    border-bottom: 1px solid #00BD00;
    cursor:pointer;
}
.legislation {
    *[data-hook], *[data-location]{
        overflow:auto;
    }
}
/*
.latest-version .legislation .reprint-date{
	display:none;
}*/

.legislation{

	hr.signature-block,
	hr.explnote,
	hr.promulgation,
	hr.reprint-index,
	hr.reprint-index{
		margin: 32px auto;
	}
}

